# JOEL

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  DOCS_SUMMARY.md  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  README_DOCS.md  TESTING.md  TEST_RESULTS.md  install.sh  test_examples.sh  test_summary.txt
docs/: COOLIFY_DOCKER.md  COOLIFY_FIX.md  COOLIFY_SETUP.md  DEPLOYMENT.md  DOCUMENTATION_PLAN.md  README.md  book.toml  build.sh  coolify.yml  next.config.mjs  package-lock.json  package.json  serve.sh  theme.config.jsx
docs/components/: BenchmarkSection.jsx  CopyButton.jsx  InstallSection.jsx
docs/pages/: _app.jsx  _meta.js  _meta.json  index.mdx  install-script.js
docs/pages/advanced/: _meta.js  actors.mdx  contracts.mdx  deployments.mdx  storage.mdx  ui-components.mdx  workflows.mdx
docs/public/: install  install.ps1
docs/src/: SUMMARY.md  introduction.md
docs/styles/: home.css
examples/: actor.joel  arithmetic.joel  async_example.joel  build_android.joel  build_cosmos.joel  build_evm.joel  build_ios.joel  build_native.joel  build_wasm.joel  contract.joel  control_flow.joel  coroutine_example.joel  deployment.joel  flow.joel  hello.joel  iterator_example.joel  parallel_example.joel  pattern_matching.joel  simple_test.joel  test_basic.joel  type_check.joel  ui_component.joel
src/: actor_runtime.rs  ast.rs  async_runtime.rs  compiler.rs  coroutine.rs  diagnostics.rs  exhaustiveness_checker.rs  iterator.rs  lexer.rs  main.rs  ownership.rs  parallel.rs  parser.rs  pattern_matcher.rs  stdlib.rs  type_checker.rs  types.rs  vm.rs
(+79 files in other folders)
