[package]
name = "joel-lang"
version = "0.1.0"
edition = "2021"
authors = ["JOEL Team"]
description = "JOEL - A polymodal programming language"

[[bin]]
name = "joel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"

[features]
default = []
llvm = []
# Note: LLVM backend requires inkwell crate and LLVM installation
# To enable: add inkwell = { version = "0.4", features = ["llvm14-0"], optional = true }
# and update [features] llvm = ["inkwell"]

